Transferred from private repo

--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!doctype html>
 <html>
-    <h1>Test</hi>
+    <head>
+        <meta charset="utf-8">
+        <title>Main</title>
+    </head>
+
+    <body>
+        <h2>mmicha05</h2>
+        <hr/>    
+        
+        <img src="avatar-man-placeholder1.png" alt="Personal_Photo" height="100" width="100">
+
+        <ul>
+        <li> <a href="resume.html">Resume</a></li>
+        <li> <a href="bio.html">Bio</a></li>
+        </ul>
+
+    </body>
+
 </html>
