--- a/resume.html
+++ b/resume.html
@@ -3,29 +3,38 @@
     <head>
         <meta charset="utf-8">
         <title>Resume</title>
-    </head>
 
+<link rel = "stylesheet" href = "style.css">
+
+    </head>
 
 <!-- Name/ Handle -->
 <body>
 
-<h1>mmicha05</h2>
+<h1>mmicha05</h1>
 
 <h2>Education:</h2>
 
 <ul>
     <li>
-        Tufts University - Boston, MA, USA - (2017 - Current):
+        <div class="emph">
+        Tufts University - Boston, MA, USA - (2017 - Current)
         <div>Post Baccalaureate Minor in Computer Science</div>
+        </div>
     </li>
 
     <li>
-         Technical University Denmark — Lygnby, Denmark — (Aug 2009):
-         <div>Certificate in Wind Energy</div>    
+        <div class="emph">
+        Technical University Denmark — Lygnby, Denmark — (Aug 2009):
+        <div>Certificate in Wind Energy</div>    
+        </div>
     </li>
 
-    <li>Illinois Institute of Technology — Chicago, IL, USA — (2009):  
+    <li>
+        <div class="emph">
+        Illinois Institute of Technology — Chicago, IL, USA — (2009):  
         <div>Bachelor Science in Electrical and Computer Engineering - Graduated with Academic Honors</div>
+        </div>
     </li>
 </ul>
 
@@ -34,8 +43,9 @@
     <ul>
     <li>
         2011-2017
-        <div> Industrial Automation Engineer - Projects Division, SIEMENS, Abu Dhabi, UAE </div>
-        <div>
+        <div class="comp"> Industrial Automation Engineer - Projects Division, SIEMENS, Abu Dhabi, UAE </div>
+
+        <div class="emph">
                 <ul>
                     <li>
                     Technical Lead on Project Planning, Design and Execution
@@ -56,10 +66,12 @@
         </div>
     </li>
 
-
     <li>
         2009 - Summer
-        <div> Power Systems Intern, Garrad Hassan Americas, Texas, Austin, USA </div>
+        <div class="comp">Power Systems Intern</div>
+
+        <div class="emph">
+        Garrad Hassan Americas, Texas, Austin, USA </div>
     </li>
 
     </ul>
@@ -68,6 +80,9 @@
 
 
 <h2>Skills:</h2>
+<ul>
+<li>
+<div class="emph">
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
 when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
@@ -75,8 +90,14 @@ It has survived not only five centuries, but also the leap into electronic types
 essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets 
 containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
 PageMaker including versions of Lorem Ipsum.
+</div>
+</li>
+</ul>
 
 <h2>Activities:</h2>
+<ul>
+<li>
+<div class="emph">
 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
  Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
  Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, 
@@ -85,6 +106,9 @@ Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots 
  (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
  very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from 
  a line in section 1.10.32.
+ </div>
+ </li>
+ </ul>
 
 </body>
 
