--- a/resume.html
+++ b/resume.html
@@ -25,15 +25,15 @@
 
     <li>
         <div class="emph">
-        Technical University Denmark — Lygnby, Denmark — (Aug 2009):
+        DTU:
         <div>Certificate in Wind Energy</div>    
         </div>
     </li>
 
     <li>
         <div class="emph">
-        Illinois Institute of Technology — Chicago, IL, USA — (2009):  
-        <div>Bachelor Science in Electrical and Computer Engineering - Graduated with Academic Honors</div>
+        IIT:  
+        <div> </div>
         </div>
     </li>
 </ul>
@@ -43,24 +43,13 @@
     <ul>
     <li>
         2011-2017
-        <div class="comp"> Industrial Automation Engineer - Projects Division, SIEMENS, Abu Dhabi, UAE </div>
+        <div class="comp"> SIEMENS </div>
 
         <div class="emph">
                 <ul>
                     <li>
                     Technical Lead on Project Planning, Design and Execution
                     </li>
-
-                    <li>Obtained Product Homologation and Technical Approvals from Government Authorities and Engineerin Consultants</li>
-                    <li>Electrical Wiring  and Controls Design</li>
-                    <li>SIEMENS Controllers and SCADA Programming</li>
-                    <li>Client Witnessed Factory Acceptance Testing of Hardware and Software</li>
-                    <li>Project Siteworks Execution, Management of Manpower and Site Activities</Li>
-                    <li>Supervision of systems setup, control panel errection, electrical wiring </li>
-                    <li>Installation and commisioning of process instrumentation and hookup to PLC</li>
-                    <li>Interface testing with 3rd party systems and suppliers - MCC, pumps, valves etc</li>
-                    <li>Final Site Acceptance Testing with end-user </li>
-                    <li> Final Project Handing Over and preparation of deliverables, obtained combined shareholder approvals</li>
                 </ul>
 
         </div>
@@ -71,7 +60,7 @@
         <div class="comp">Power Systems Intern</div>
 
         <div class="emph">
-        Garrad Hassan Americas, Texas, Austin, USA </div>
+        Garrad Hassan Americas </div>
     </li>
 
     </ul>
